--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ main{
     color: white;
     display: flex;
     justify-content: center;
-    margin-top: 3em;
+    margin-top: 2.5em;
 }
 
 .container-card p{
@@ -232,6 +232,11 @@ main{
     text-align: center;
     font-size: 1em;
     margin: 1em;
+}
+
+.container-card i{
+    color: #FF0040;
+    font-size: 1.5em;
 }
 
 .background-card{
@@ -285,15 +290,34 @@ main{
 
 /*Footer*/
 footer{
-    margin-top: 1em;
     background-color: #0D1117;
-    height: 200px;
+    height: 10em;
 }
 
-footer p {
-    margin-bottom: 0;
+#main-footer {
+    padding-top: 3em;
     text-align: center;
-    padding: 3em;
+    font-size: 1.1em;
+    color: #FF0040;
+}
+
+footer ul{
+    display: flex;
+    justify-content: center;
+}
+
+footer ul li{
+    margin: 0 .5em;
+}
+
+footer ul i{
+    color: #FF0040;
+    font-size: 1.5em;
+}
+
+footer ul p{
+    font-size: 1em;
+    color: #FF0040;
 }
 /*javascripts*/
 #BackgroundAnimation-top li{
